# linkfix-for-discord

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  Dockerfile  README.md  docker-compose.example.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: lint.yml  publish-image.yml  publish.yml
src/: index.ts  linkfix.py  replacements.ts
src/linkfix_for_discord/: __init__.py
